--- a/Book Discovery/BookResults/Views/BookResultsTableViewCell.xib
+++ b/Book Discovery/BookResults/Views/BookResultsTableViewCell.xib
@@ -8,56 +8,85 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="BookResultsTableViewCell" rowHeight="98" id="oqw-cy-Qwh" customClass="BookResultsTableViewCell" customModule="Book_Discovery" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="334" height="98"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="BookResultsTableViewCell" rowHeight="130" id="oqw-cy-Qwh" customClass="BookResultsTableViewCell" customModule="Book_Discovery" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="334" height="130"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="oqw-cy-Qwh" id="I6t-qC-jb4">
-                <rect key="frame" x="0.0" y="0.0" width="334" height="98"/>
+                <rect key="frame" x="0.0" y="0.0" width="334" height="130"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="book.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="VMv-aq-eeq">
-                        <rect key="frame" x="8" y="21.666666666666657" width="65" height="58.333333333333329"/>
+                        <rect key="frame" x="8" y="21.666666666666664" width="65" height="90.333333333333343"/>
+                        <color key="tintColor" red="0.57874745130000005" green="0.32151988149999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="65" id="4YY-eq-rQS"/>
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="46b-Xt-TFA">
-                        <rect key="frame" x="89" y="25" width="229" height="51"/>
+                        <rect key="frame" x="89" y="20" width="199" height="93"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Book Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oRU-4i-NdS">
-                                <rect key="frame" x="0.0" y="0.0" width="229" height="25"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oRU-4i-NdS">
+                                <rect key="frame" x="0.0" y="0.0" width="199" height="22"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Book Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nzm-9y-3Pa">
-                                <rect key="frame" x="0.0" y="33" width="229" height="18"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nzm-9y-3Pa">
+                                <rect key="frame" x="0.0" y="30" width="199" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pages" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZQM-B2-WwC" userLabel="Pages Label">
+                                <rect key="frame" x="0.0" y="56" width="199" height="15.666666666666671"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Publisher" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nqy-or-Th2" userLabel="Publisher Label">
+                                <rect key="frame" x="0.0" y="79.666666666666671" width="199" height="13.333333333333329"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                     </stackView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6kR-Ge-tqs" userLabel="Favorite Button">
+                        <rect key="frame" x="296" y="53.666666666666657" width="30" height="27"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="5lM-gp-rvB"/>
+                            <constraint firstAttribute="height" constant="30" id="tce-gl-tcl"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                        <color key="tintColor" red="0.58081901069999997" green="0.088427625600000004" blue="0.31863921880000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <state key="normal" backgroundImage="heart" catalog="system"/>
+                    </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="46b-Xt-TFA" firstAttribute="top" secondItem="I6t-qC-jb4" secondAttribute="top" constant="25" id="0LL-Mw-Gjp"/>
                     <constraint firstItem="46b-Xt-TFA" firstAttribute="leading" secondItem="VMv-aq-eeq" secondAttribute="trailing" constant="16" id="56a-GI-Inz"/>
-                    <constraint firstAttribute="trailing" secondItem="46b-Xt-TFA" secondAttribute="trailing" constant="16" id="7BV-id-VuK"/>
                     <constraint firstItem="46b-Xt-TFA" firstAttribute="centerY" secondItem="VMv-aq-eeq" secondAttribute="centerY" id="8jU-Te-itK"/>
+                    <constraint firstItem="46b-Xt-TFA" firstAttribute="top" secondItem="I6t-qC-jb4" secondAttribute="top" constant="20" id="Poe-np-PtH"/>
+                    <constraint firstAttribute="trailing" secondItem="6kR-Ge-tqs" secondAttribute="trailing" constant="8" id="Qib-Vk-px5"/>
                     <constraint firstAttribute="bottom" secondItem="VMv-aq-eeq" secondAttribute="bottom" constant="17" id="WmD-YY-p4V"/>
+                    <constraint firstItem="6kR-Ge-tqs" firstAttribute="leading" secondItem="46b-Xt-TFA" secondAttribute="trailing" constant="8" id="qYm-EM-ZFF"/>
                     <constraint firstItem="VMv-aq-eeq" firstAttribute="top" secondItem="I6t-qC-jb4" secondAttribute="top" constant="20" id="tKm-nn-uWn"/>
+                    <constraint firstItem="6kR-Ge-tqs" firstAttribute="centerY" secondItem="VMv-aq-eeq" secondAttribute="centerY" id="tdS-by-Aht"/>
                     <constraint firstItem="VMv-aq-eeq" firstAttribute="leading" secondItem="I6t-qC-jb4" secondAttribute="leading" constant="8" id="zMS-Wq-Nce"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="artwork" destination="VMv-aq-eeq" id="XDa-Yp-jtp"/>
                 <outlet property="authorLabel" destination="nzm-9y-3Pa" id="zch-M9-RV7"/>
+                <outlet property="favoriteButton" destination="6kR-Ge-tqs" id="gEO-jx-5Au"/>
+                <outlet property="pagesLabel" destination="ZQM-B2-WwC" id="WVG-uB-0BS"/>
+                <outlet property="publisherLabel" destination="Nqy-or-Th2" id="ozX-uv-JG6"/>
                 <outlet property="titleLabel" destination="oRU-4i-NdS" id="dF4-bv-elN"/>
             </connections>
-            <point key="canvasLocation" x="156.52173913043478" y="13.392857142857142"/>
+            <point key="canvasLocation" x="155.38461538461539" y="24.170616113744074"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="book.fill" catalog="system" width="128" height="102"/>
+        <image name="heart" catalog="system" width="128" height="109"/>
     </resources>
 </document>
