--- a/Book Discovery/BookDetail/VIews/BookDetailsTableViewCell.xib
+++ b/Book Discovery/BookDetail/VIews/BookDetailsTableViewCell.xib
@@ -51,7 +51,7 @@
                             </label>
                             <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pages" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mry-1t-Ge9" userLabel="Pages Label">
                                 <rect key="frame" x="0.0" y="121.00000000000001" width="407" height="26.666666666666671"/>
-                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
