--- a/Book Discovery/BookDetail/Views/BookPricesTableViewCell.xib
+++ b/Book Discovery/BookDetail/Views/BookPricesTableViewCell.xib
@@ -11,23 +11,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="BookPricesTableViewCell" rowHeight="89" id="KGk-i7-Jjw" customClass="BookPricesTableViewCell" customModule="Book_Discovery" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="407" height="89"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="BookPricesTableViewCell" rowHeight="93" id="KGk-i7-Jjw" customClass="BookPricesTableViewCell" customModule="Book_Discovery" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="407" height="93"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="407" height="89"/>
+                <rect key="frame" x="0.0" y="0.0" width="407" height="93"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" image="book.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="90t-w9-UhZ">
-                        <rect key="frame" x="20" y="9" width="62" height="60"/>
-                        <color key="tintColor" red="0.57874745130000005" green="0.32151988149999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="62" id="Cs7-h4-yzc"/>
-                            <constraint firstAttribute="height" constant="62" id="cUC-t1-2mD"/>
-                        </constraints>
-                    </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="2Y2-E0-kk8">
-                        <rect key="frame" x="98" y="15.5" width="57.5" height="47.5"/>
+                        <rect key="frame" x="102" y="19.5" width="57.5" height="47.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Site" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="afw-VC-Ids">
                                 <rect key="frame" x="0.0" y="0.0" width="57.5" height="19.5"/>
@@ -44,7 +36,7 @@
                         </subviews>
                     </stackView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m2I-vd-X5q">
-                        <rect key="frame" x="365" y="24" width="30" height="30"/>
+                        <rect key="frame" x="365" y="28" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="2Hd-0R-eww"/>
                             <constraint firstAttribute="width" constant="30" id="BUN-2J-I98"/>
@@ -55,35 +47,44 @@
                         </state>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YHj-uE-3yG">
-                        <rect key="frame" x="310" y="29" width="39" height="20.5"/>
+                        <rect key="frame" x="310" y="33" width="39" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="90t-w9-UhZ">
+                        <rect key="frame" x="16" y="9" width="70" height="68"/>
+                        <color key="tintColor" red="0.57874745130000005" green="0.32151988149999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="70" id="8gD-Si-jtu"/>
+                            <constraint firstAttribute="height" constant="70" id="nwR-rB-ULo"/>
+                        </constraints>
+                        <imageReference key="image" image="book.fill" catalog="system" symbolScale="default"/>
+                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
+                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="90t-w9-UhZ" secondAttribute="bottom" constant="8" id="3Yi-il-cQc"/>
                     <constraint firstItem="YHj-uE-3yG" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="2Y2-E0-kk8" secondAttribute="trailing" constant="16" id="3zl-NX-TyA"/>
+                    <constraint firstItem="2Y2-E0-kk8" firstAttribute="centerY" secondItem="90t-w9-UhZ" secondAttribute="centerY" id="C54-HF-rxm"/>
                     <constraint firstItem="m2I-vd-X5q" firstAttribute="leading" secondItem="YHj-uE-3yG" secondAttribute="trailing" constant="16" id="Hps-gb-Emm"/>
-                    <constraint firstItem="m2I-vd-X5q" firstAttribute="centerY" secondItem="90t-w9-UhZ" secondAttribute="centerY" id="I5S-2b-8Oz"/>
-                    <constraint firstItem="2Y2-E0-kk8" firstAttribute="leading" secondItem="90t-w9-UhZ" secondAttribute="trailing" constant="16" id="Kcp-lr-cwD"/>
-                    <constraint firstItem="90t-w9-UhZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" symbolic="YES" id="LEu-SS-aN3"/>
+                    <constraint firstItem="m2I-vd-X5q" firstAttribute="centerY" secondItem="YHj-uE-3yG" secondAttribute="centerY" id="Kq8-lV-Xg5"/>
                     <constraint firstAttribute="trailing" secondItem="m2I-vd-X5q" secondAttribute="trailing" constant="12" id="QIW-Cq-qE4"/>
-                    <constraint firstItem="YHj-uE-3yG" firstAttribute="centerY" secondItem="90t-w9-UhZ" secondAttribute="centerY" id="TAm-tg-Sgh"/>
-                    <constraint firstItem="2Y2-E0-kk8" firstAttribute="centerY" secondItem="90t-w9-UhZ" secondAttribute="centerY" id="aLZ-bH-GhX"/>
-                    <constraint firstAttribute="trailing" secondItem="90t-w9-UhZ" secondAttribute="trailing" constant="325" id="q6c-xJ-ebl"/>
-                    <constraint firstItem="90t-w9-UhZ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="uKX-pu-ePz"/>
+                    <constraint firstItem="2Y2-E0-kk8" firstAttribute="leading" secondItem="90t-w9-UhZ" secondAttribute="trailing" constant="16" id="aPX-Up-hFX"/>
+                    <constraint firstItem="YHj-uE-3yG" firstAttribute="centerY" secondItem="2Y2-E0-kk8" secondAttribute="centerY" id="fWW-7R-hVU"/>
+                    <constraint firstItem="90t-w9-UhZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="ogv-rM-mBV"/>
+                    <constraint firstAttribute="bottom" secondItem="90t-w9-UhZ" secondAttribute="bottom" constant="8" id="rkX-3Y-OeB"/>
+                    <constraint firstItem="90t-w9-UhZ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="sh8-0A-4e8"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="discountLabel" destination="mbI-ZN-ztB" id="fgU-oI-BhU"/>
+                <outlet property="logoImageView" destination="90t-w9-UhZ" id="rsj-wK-efo"/>
                 <outlet property="navigateToSiteButton" destination="m2I-vd-X5q" id="oOT-3d-NUf"/>
                 <outlet property="priceLabel" destination="YHj-uE-3yG" id="Efc-9O-mYl"/>
-                <outlet property="siteLogo" destination="90t-w9-UhZ" id="EMh-vS-0fF"/>
                 <outlet property="siteNameLabel" destination="afw-VC-Ids" id="zAj-0K-V9K"/>
             </connections>
-            <point key="canvasLocation" x="197.82608695652175" y="122.20982142857142"/>
+            <point key="canvasLocation" x="197.82608695652175" y="123.54910714285714"/>
         </tableViewCell>
     </objects>
     <resources>
